--- a/content/Intellipaat/Devops BC = 2330070508.md
+++ b/content/Intellipaat/Devops BC = 2330070508.md
@@ -1,92 +1,73 @@
 
-> [!question]- Module 2: Git
-> - Module 2:
-> 	- [x] [[Assignment 1 – Git_Module 2_Devops BC = 2330070508|Assignment 1 – Git]]
-> 	- [x] [[Assignment 2 – Git_Module 2_Devops BC = 2330070508|Assignment 2 – Git]]
-> 	- [x] [[Assignment 3 – Git_Module 2_Devops BC = 2330070508|Assignment 3 – Git]]
-> 	- [x] [[Assignment 4 – Git_Module 2_Devops BC = 2330070508|Assignment 4 – Git]]
-> 	- [x] [[Assignment 5 – Git_Module 2_Devops BC = 2330070508|Assignment 5 – Git]]
-> 	- [x] [[Case Study 1– Git Workflow_Module 2_Devops BC = 2330070508|Case Study 1– Git Workflow]]
-> 	- [x] [[Case Study 2– Resolving Merge Conflicts_Module 2_Devops BC = 2330070508|Case Study 2– Resolving Merge Conflicts]]
+### Git
+1. [[Assignment 1 – Git_Module 2_Devops BC = 2330070508|Assignment 1 – Git]]
+2. [[Assignment 2 – Git_Module 2_Devops BC = 2330070508|Assignment 2 – Git]]
+3. [[Assignment 3 – Git_Module 2_Devops BC = 2330070508|Assignment 3 – Git]]
+4. [[Assignment 4 – Git_Module 2_Devops BC = 2330070508|Assignment 4 – Git]]
+5. [[Assignment 5 – Git_Module 2_Devops BC = 2330070508|Assignment 5 – Git]]
+6. [[Case Study 1– Git Workflow_Module 2_Devops BC = 2330070508|Case Study 1– Git Workflow]]
+7. [[Case Study 2– Resolving Merge Conflicts_Module 2_Devops BC = 2330070508|Case Study 2– Resolving Merge Conflicts]]
 
-> [!done]- Module 3: Docker
-> - Module 3:
-> 	- [x] [[Assignment 1 – Docker – I_Module 3_Devops BC = 2330070508|Assignment 1 – Docker – I]]
-> 	- [x] [[Assignment 2 – Docker – I_Module 3_Devops BC = 2330070508|Assignment 2 – Docker – I]]
-> 	- [x] [[Assignment 3 – Docker – I_Module 3_Devops BC = 2330070508|Assignment 3 – Docker – I]]
-> 	- [x] [[Assignment 4 – Docker – I_Module 3_Devops BC = 2330070508|Assignment 4 – Docker – I]]
-> 	- [x] [[Assignment 5 – Docker – I_Module 3_Devops BC = 2330070508|Assignment 5 – Docker – I]]
-> 	- [x] [[Case Study 1 – Containerization Using Docker – Part 1_Module 3_Devops BC = 2330070508|Case Study 1 – Containerization Using Docker – Part 1]]
+### Docker
+8. [[Assignment 1 – Docker – I_Module 3_Devops BC = 2330070508|Assignment 1 – Docker – I]]
+9. [[Assignment 2 – Docker – I_Module 3_Devops BC = 2330070508|Assignment 2 – Docker – I]]
+10. [[Assignment 3 – Docker – I_Module 3_Devops BC = 2330070508|Assignment 3 – Docker – I]]
+11. [[Assignment 4 – Docker – I_Module 3_Devops BC = 2330070508|Assignment 4 – Docker – I]]
+12. [[Assignment 5 – Docker – I_Module 3_Devops BC = 2330070508|Assignment 5 – Docker – I]]
+13. [[Case Study 1 – Containerization Using Docker – Part 1_Module 3_Devops BC = 2330070508|Case Study 1 – Containerization Using Docker – Part 1]]
 
-> [!quote]- Module 4: Puppet SKIPPED
-> - Module 4:
->             [[Installing Puppet]] ==Cleanup==
-> 	- [ ] [[Assignment 1 – Puppet_Module 4_Devops BC = 2330070508|Assignment 1 – Puppet]] ==Cleanup==
-> 	- [ ] [[Assignment 2 – Puppet_Module 4_Devops BC = 2330070508|Assignment 2 – Puppet]] ==Cleanup==
-> 	- [ ] [[Assignment 3 – Puppet_Module 4_Devops BC = 2330070508|Assignment 3 – Puppet]] ==Cleanup==
-> 	- [ ] [[Assignment 4 – Puppet_Module 4_Devops BC = 2330070508|Assignment 4 – Puppet]]
-> 	- [ ] [[Assignment 5 – Puppet_Module 4_Devops BC = 2330070508|Assignment 5 – Puppet]]
-> 	- [ ] [[Case Study – Configuration Management Using Puppet_Module 4_Devops BC = 2330070508|Case Study – Configuration Management Using Puppet]]
-> 
+14. [[Assignment 1 – Docker – II_Docker II_Devops BC = 2330070508|Assignment 1 – Docker – II]] 
+15. [[Assignment 2 – Docker – II_Docker II_Devops BC = 2330070508|Assignment 2 – Docker – II]] 
+16. [[Assignment 3 – Docker – II_Docker II_Devops BC = 2330070508|Assignment 3 – Docker – II]] 
+17. [[Assignment 4 – Docker – II_Docker II_Devops BC = 2330070508|Assignment 4 – Docker – II]] 
+18. [[Assignment 5 – Docker – II_Docker II_Devops BC = 2330070508|Assignment 5 – Docker – II]] 
 
-> [!done]- Module 5: Ansible
-> - Module 5:
-> 	- [x] [[Assignment 1 – Ansible_Module 5_Devops BC = 2330070508|Assignment 1 – Ansible]]
-> 	- [x] [[Assignment 2 – Ansible_Module 5_Devops BC = 2330070508|Assignment 2 – Ansible]] 
-> 	- [x] [[Assignment 3 – Ansible_Module 5_Devops BC = 2330070508|Assignment 3 – Ansible]]
-> 	- [x] [[Assignment 4 – Ansible_Module 5_Devops BC = 2330070508|Assignment 4 – Ansible]]
-> 	- [x] [[Assignment 5 – Ansible_Module 5_Devops BC = 2330070508|Assignment 5 – Ansible]] 
-> 	- [x] [[Case Study 1 – Ansible_Module 5_Devops BC = 2330070508|Case Study 1 – Ansible]]
+### Module 5: Ansible
+19. [[Assignment 1 – Ansible_Module 5_Devops BC = 2330070508|Assignment 1 – Ansible]]
+20. [[Assignment 2 – Ansible_Module 5_Devops BC = 2330070508|Assignment 2 – Ansible]] 
+21. [[Assignment 3 – Ansible_Module 5_Devops BC = 2330070508|Assignment 3 – Ansible]]
+22. [[Assignment 4 – Ansible_Module 5_Devops BC = 2330070508|Assignment 4 – Ansible]]
+23. [[Assignment 5 – Ansible_Module 5_Devops BC = 2330070508|Assignment 5 – Ansible]] 
+24. [[Case Study 1 – Ansible_Module 5_Devops BC = 2330070508|Case Study 1 – Ansible]]
 
+### Module 6: Jenkins
+25. [[Assignment 1 – Jenkins_Module 6_Devops BC = 2330070508|Assignment 1 – Jenkins]]
+26. [[Assignment 2 – Jenkins_Module 6_Devops BC = 2330070508|Assignment 2 – Jenkins]]
+27. [[Assignment 3 – Jenkins_Module 6_Devops BC = 2330070508|Assignment 3 – Jenkins]]
+28. [[Case Study 1 – Jenkins_Module 6_Devops BC = 2330070508|Case Study 1 – Jenkins]]
 
-> [!attention]- Module 6: Jenkins
-> - Module 6: 
->        %%[Link Zoom](https://us02web.zoom.us/rec/component-page?action=viewdetailpage&sharelevel=meeting&useWhichPasswd=meeting&clusterId=us02&componentName=need-password&meetingId=bAKelMBW_OoCMpmJ4hnbdBRbWL2dC5fPnSbNZkEGDDraYJtV-yt2DNJOiUi2fwMw.q6Lxu91xnoTL2iCY&originRequestUrl=https%3A%2F%2Fus02web.zoom.us%2Frec%2Fshare%2F3DJHhnL_j7uvnBpoA2KEMo0tat5qduxlo3bn3MCQeJ4gegc3CgNr_cBQlFbFY9HY.lJ6B9p4ZOQtJMCgU) Passcode: `Zm.N8WwQ`%%
-> 	- [x] [[Assignment 1 – Jenkins_Module 6_Devops BC = 2330070508|Assignment 1 – Jenkins]]
-> 	- [x] [[Assignment 2 – Jenkins_Module 6_Devops BC = 2330070508|Assignment 2 – Jenkins]]
-> 	- [x] [[Assignment 3 – Jenkins_Module 6_Devops BC = 2330070508|Assignment 3 – Jenkins]]
-> 	- [x] [[Case Study 1 – Jenkins_Module 6_Devops BC = 2330070508|Case Study 1 – Jenkins]]
+### Module 7: Kubernetes
+- [[Installing Kubernetes (Kubeadm)]]
+29. [[Assignment 1 – Kubernetes_Module 7_Devops BC = 2330070508|Assignment 1 – Kubernetes]]
+30. [[Assignment 2 – Kubernetes_Module 7_Devops BC = 2330070508|Assignment 2 – Kubernetes]]
+31. [[Assignment 3 – Kubernetes_Module 7_Devops BC = 2330070508|Assignment 3 – Kubernetes]] 
+32. [[Assignment 4 – Kubernetes_Module 7_Devops BC = 2330070508|Assignment 4 – Kubernetes]]
+33. [[Assignment 5 – Kubernetes_Module 7_Devops BC = 2330070508|Assignment 5 – Kubernetes]] 
 
-> [!done]- Module 7: Kubernetes
-> - Module 7:
->              [[Installing Kubernetes (Kubeadm)]]
-> 	- [x] [[Assignment 1 – Kubernetes_Module 7_Devops BC = 2330070508|Assignment 1 – Kubernetes]]
-> 	- [x] [[Assignment 2 – Kubernetes_Module 7_Devops BC = 2330070508|Assignment 2 – Kubernetes]]
-> 	- [x] [[Assignment 3 – Kubernetes_Module 7_Devops BC = 2330070508|Assignment 3 – Kubernetes]] 
-> 	- [x] [[Assignment 4 – Kubernetes_Module 7_Devops BC = 2330070508|Assignment 4 – Kubernetes]]
-> 	- [x] [[Assignment 5 – Kubernetes_Module 7_Devops BC = 2330070508|Assignment 5 – Kubernetes]] 
-> 	- [ ] [[Case Study 1 – Introduction To Kubernetes_Module 7_Devops BC = 2330070508|Case Study 1 – Introduction To Kubernetes]] #skipped 
+### Module 8: Terraform
+- [[Installing Terraform]]
+34. [[Assignment 1 – Terraform_Module 8_Devops BC = 2330070508|Assignment 1 – Terraform]]
+35. [[Assignment 2 – Terraform_Module 8_Devops BC = 2330070508|Assignment 2 – Terraform]] 
+36. [[Assignment 3 – Terraform_Module 8_Devops BC = 2330070508|Assignment 3 – Terraform]] 
+37. [[Assignment 4 – Terraform_Module 8_Devops BC = 2330070508|Assignment 4 – Terraform]]
+38. [[Assignment 5 – Terraform_Module 8_Devops BC = 2330070508|Assignment 5 – Terraform]] 
+### Nagios:
+39. [[Assignment 1 – Nagios_Nagios_Devops BC = 2330070508|Assignment 1 – Nagios]]
+40. [[Assignment 2 – Nagios_Nagios_Devops BC = 2330070508|Assignment 2 – Nagios]] 
+41. [[Assignment 3 – Nagios_Nagios_Devops BC = 2330070508|Assignment 3 – Nagios]] 
+42. [[Assignment 4 – Nagios_Nagios_Devops BC = 2330070508|Assignment 4 – Nagios]]
 
-> [!attention]- Module 8: Terraform
-> - Module 8:
->  [[Add.Edit Environment Variables (Windows)]]
->             [[Installing Terraform]]
-> 	- [x] [[Assignment 1 – Terraform_Module 8_Devops BC = 2330070508|Assignment 1 – Terraform]]
-> 	- [x] [[Assignment 2 – Terraform_Module 8_Devops BC = 2330070508|Assignment 2 – Terraform]] 
-> 	- [x] [[Assignment 3 – Terraform_Module 8_Devops BC = 2330070508|Assignment 3 – Terraform]] 
-> 	- [x] [[Assignment 4 – Terraform_Module 8_Devops BC = 2330070508|Assignment 4 – Terraform]]
-> 	- [x] [[Assignment 5 – Terraform_Module 8_Devops BC = 2330070508|Assignment 5 – Terraform]] 
-> 	- [ ] [[Case Study 1 – Terraform_Module 8_Devops BC = 2330070508|Case Study 1 – Terraform]]
+### Projects:
+43. [[DevOps Capstone Project 1_Projects_Devops BC = 2330070508|DevOps Capstone Project 1]] 
+44. [[DevOps Capstone Project 2_Projects_Devops BC = 2330070508|DevOps Capstone Project 2]] 
 
+---
+### Puppet 
+[[Installing Puppet]] ==Cleanup==
+[[Assignment 1 – Puppet_Module 4_Devops BC = 2330070508|Assignment 1 – Puppet]] ==Cleanup==
+[[Assignment 2 – Puppet_Module 4_Devops BC = 2330070508|Assignment 2 – Puppet]] ==Cleanup==
+[[Assignment 3 – Puppet_Module 4_Devops BC = 2330070508|Assignment 3 – Puppet]] ==Cleanup==
 
-> [!attention]- Nagios: ==Sent==
-> - [x] [[Assignment 1 – Nagios_Nagios_Devops BC = 2330070508|Assignment 1 – Nagios]]
-> - [x] [[Assignment 2 – Nagios_Nagios_Devops BC = 2330070508|Assignment 2 – Nagios]] 
-> - [x] [[Assignment 3 – Nagios_Nagios_Devops BC = 2330070508|Assignment 3 – Nagios]] 
-> - [x] [[Assignment 4 – Nagios_Nagios_Devops BC = 2330070508|Assignment 4 – Nagios]]
-> - [ ] [[Case Study – Continuous Monitoring Using Nagios_Nagios_Devops BC = 2330070508|Case Study – Continuous Monitoring Using Nagios]]
-> 
-
-> [!attention]- Docker II
-> - Docker II:
-> 	- [x] [[Assignment 1 – Docker – II_Docker II_Devops BC = 2330070508|Assignment 1 – Docker – II]] 
-> 	- [x] [[Assignment 2 – Docker – II_Docker II_Devops BC = 2330070508|Assignment 2 – Docker – II]] 
-> 	- [x] [[Assignment 3 – Docker – II_Docker II_Devops BC = 2330070508|Assignment 3 – Docker – II]] 
-> 	- [x] [[Assignment 4 – Docker – II_Docker II_Devops BC = 2330070508|Assignment 4 – Docker – II]] 
-> 	- [x] [[Assignment 5 – Docker – II_Docker II_Devops BC = 2330070508|Assignment 5 – Docker – II]] 
-> 	- [ ] [[Case Study – Containerization Using Docker – Part 2_Docker II_Devops BC = 2330070508|Case Study – Containerization Using Docker – Part 2]]
-
-> [!attention]- Projects: ==Sent==
->  - [x] [[DevOps Capstone Project 1_Projects_Devops BC = 2330070508|DevOps Capstone Project 1]] 
->  - [x] [[DevOps Capstone Project 2_Projects_Devops BC = 2330070508|DevOps Capstone Project 2]] 
-> 
+[[Assignment 4 – Puppet_Module 4_Devops BC = 2330070508|Assignment 4 – Puppet]] ==Pending==
+[[Assignment 5 – Puppet_Module 4_Devops BC = 2330070508|Assignment 5 – Puppet]] ==Pending==
+[[Case Study – Configuration Management Using Puppet_Module 4_Devops BC = 2330070508|Case Study – Configuration Management Using Puppet]]==Pending==
