--- a/content/Intellipaat/Devops BC = 2330070508.md
+++ b/content/Intellipaat/Devops BC = 2330070508.md
@@ -9,12 +9,12 @@
 7. [[Case Study 2– Resolving Merge Conflicts_Module 2_Devops BC = 2330070508|Case Study 2– Resolving Merge Conflicts]]
 
 ### Docker
-8. [[Assignment 1 – Docker – I_Module 3_Devops BC = 2330070508|Assignment 1 – Docker – I]]
-9. [[Assignment 2 – Docker – I_Module 3_Devops BC = 2330070508|Assignment 2 – Docker – I]]
+8. [[Assignment 1 – Docker – I_Module 3_Devops BC = 2330070508|Deploying an Ubuntu Container with Apache2 and Port Mapping]]
+9. [[Assignment 2 – Docker – I_Module 3_Devops BC = 2330070508|Saving and Running a Custom Docker Image with Apache2]]
 10. [[Assignment 3 – Docker – I_Module 3_Devops BC = 2330070508|Assignment 3 – Docker – I]]
 11. [[Assignment 4 – Docker – I_Module 3_Devops BC = 2330070508|Assignment 4 – Docker – I]]
 12. [[Assignment 5 – Docker – I_Module 3_Devops BC = 2330070508|Assignment 5 – Docker – I]]
-13. [[Case Study 1 – Containerization Using Docker – Part 1_Module 3_Devops BC = 2330070508|Case Study 1 – Containerization Using Docker – Part 1]]
+13. [[Case Study 1 – Containerization Using Docker – Part 1_Module 3_Devops BC = 2330070508|Case Study 1 – Containerization Using Docker – Part 1]]  
 
 14. [[Assignment 1 – Docker – II_Docker II_Devops BC = 2330070508|Assignment 1 – Docker – II]] 
 15. [[Assignment 2 – Docker – II_Docker II_Devops BC = 2330070508|Assignment 2 – Docker – II]] 
