--- a/content/Intellipaat/Devops BC = 2330070508.md
+++ b/content/Intellipaat/Devops BC = 2330070508.md
@@ -15,12 +15,12 @@
 11. [[Assignment 4 – Docker – I_Module 3_Devops BC = 2330070508|Crafting a Dockerfile]]
 12. [[Assignment 5 – Docker – I_Module 3_Devops BC = 2330070508|Integrating a Custom HTML File into an Ubuntu-Apache Docker Container]]
 13. [[Case Study 1 – Containerization Using Docker – Part 1_Module 3_Devops BC = 2330070508|Containerizing Apache on Ubuntu]]  
-
-14. [[Assignment 1 – Docker – II_Docker II_Devops BC = 2330070508|Assignment 1 – Docker – II]] 
-15. [[Assignment 2 – Docker – II_Docker II_Devops BC = 2330070508|Assignment 2 – Docker – II]] 
-16. [[Assignment 3 – Docker – II_Docker II_Devops BC = 2330070508|Assignment 3 – Docker – II]] 
-17. [[Assignment 4 – Docker – II_Docker II_Devops BC = 2330070508|Assignment 4 – Docker – II]] 
-18. [[Assignment 5 – Docker – II_Docker II_Devops BC = 2330070508|Assignment 5 – Docker – II]] 
+- 
+14. [[Assignment 1 – Docker – II_Docker II_Devops BC = 2330070508|Managing Apache2 Containers and Creating Volume]] 
+15. [[Assignment 2 – Docker – II_Docker II_Devops BC = 2330070508|Implementing Dynamic HTML File Replacement with Apache2 Container]] 
+16. [[Assignment 3 – Docker – II_Docker II_Devops BC = 2330070508|Deploying Multiple Custom Containers with Docker Compose]] 
+17. [[Assignment 4 – Docker – II_Docker II_Devops BC = 2330070508|Building a Docker Swarm Cluster with Apache Container Replication]] 
+18. [[Assignment 5 – Docker – II_Docker II_Devops BC = 2330070508|Creating Overlay Networks and Testing Container Connectivity]] 
 
 ### Module 5: Ansible
 19. [[Assignment 1 – Ansible_Module 5_Devops BC = 2330070508|Assignment 1 – Ansible]]
