--- a/content/Intellipaat/Devops BC = 2330070508.md
+++ b/content/Intellipaat/Devops BC = 2330070508.md
@@ -23,12 +23,12 @@
 18. [[Assignment 5 – Docker – II_Docker II_Devops BC = 2330070508|Creating Overlay Networks and Testing Container Connectivity]] 
 
 ### Module 5: Ansible
-19. [[Assignment 1 – Ansible_Module 5_Devops BC = 2330070508|Assignment 1 – Ansible]]
-20. [[Assignment 2 – Ansible_Module 5_Devops BC = 2330070508|Assignment 2 – Ansible]] 
-21. [[Assignment 3 – Ansible_Module 5_Devops BC = 2330070508|Assignment 3 – Ansible]]
-22. [[Assignment 4 – Ansible_Module 5_Devops BC = 2330070508|Assignment 4 – Ansible]]
-23. [[Assignment 5 – Ansible_Module 5_Devops BC = 2330070508|Assignment 5 – Ansible]] 
-24. [[Case Study 1 – Ansible_Module 5_Devops BC = 2330070508|Case Study 1 – Ansible]]
+19. [[Assignment 1 – Ansible_Module 5_Devops BC = 2330070508|Setting up a Cluster and Installing Software with Ansible Playbooks]]
+20. [[Assignment 2 – Ansible_Module 5_Devops BC = 2330070508|Executing a Custom Script to Add Text to Files on Multiple Hosts]] 
+21. [[Assignment 3 – Ansible_Module 5_Devops BC = 2330070508|Installing Apache2 and NGINX on Different Hosts Using Ansible Roles]]
+22. [[Assignment 4 – Ansible_Module 5_Devops BC = 2330070508|Configuring Files on NGINX Host in an Ansible Cluster]]
+23. [[Assignment 5 – Ansible_Module 5_Devops BC = 2330070508|Deploying a Multi-Node Ansible Cluster and Grouping Hosts]] 
+24. [[Case Study 1 – Ansible_Module 5_Devops BC = 2330070508|Streamlining Web Server Management with Ansible]]
 
 ### Module 6: Jenkins
 25. [[Assignment 1 – Jenkins_Module 6_Devops BC = 2330070508|Assignment 1 – Jenkins]]
