--- a/content/Intellipaat/Devops BC = 2330070508.md
+++ b/content/Intellipaat/Devops BC = 2330070508.md
@@ -36,30 +36,10 @@
 27. [[Assignment 3 – Jenkins_Module 6_Devops BC = 2330070508|Assignment 3 – Jenkins]]
 28. [[Case Study 1 – Jenkins_Module 6_Devops BC = 2330070508|Case Study 1 – Jenkins]]
 
-### Module 7: Kubernetes
-- [[Installing Kubernetes (Kubeadm)]]
-29. [[Assignment 1 – Kubernetes_Module 7_Devops BC = 2330070508|Assignment 1 – Kubernetes]]
-30. [[Assignment 2 – Kubernetes_Module 7_Devops BC = 2330070508|Assignment 2 – Kubernetes]]
-31. [[Assignment 3 – Kubernetes_Module 7_Devops BC = 2330070508|Assignment 3 – Kubernetes]] 
-32. [[Assignment 4 – Kubernetes_Module 7_Devops BC = 2330070508|Assignment 4 – Kubernetes]]
-33. [[Assignment 5 – Kubernetes_Module 7_Devops BC = 2330070508|Assignment 5 – Kubernetes]] 
 
-### Module 8: Terraform
-- [[Installing Terraform]]
-34. [[Assignment 1 – Terraform_Module 8_Devops BC = 2330070508|Assignment 1 – Terraform]]
-35. [[Assignment 2 – Terraform_Module 8_Devops BC = 2330070508|Assignment 2 – Terraform]] 
-36. [[Assignment 3 – Terraform_Module 8_Devops BC = 2330070508|Assignment 3 – Terraform]] 
-37. [[Assignment 4 – Terraform_Module 8_Devops BC = 2330070508|Assignment 4 – Terraform]]
-38. [[Assignment 5 – Terraform_Module 8_Devops BC = 2330070508|Assignment 5 – Terraform]] 
-### Nagios:
-39. [[Assignment 1 – Nagios_Nagios_Devops BC = 2330070508|Assignment 1 – Nagios]]
-40. [[Assignment 2 – Nagios_Nagios_Devops BC = 2330070508|Assignment 2 – Nagios]] 
-41. [[Assignment 3 – Nagios_Nagios_Devops BC = 2330070508|Assignment 3 – Nagios]] 
-42. [[Assignment 4 – Nagios_Nagios_Devops BC = 2330070508|Assignment 4 – Nagios]]
-
-### Projects:
-43. [[DevOps Capstone Project 1_Projects_Devops BC = 2330070508|DevOps Capstone Project 1]] 
-44. [[DevOps Capstone Project 2_Projects_Devops BC = 2330070508|DevOps Capstone Project 2]] 
+| ### Projects:<br>43. [[DevOps Capstone Project 1_Projects_Devops BC = 2330070508\|DevOps Capstone Project 1]] <br>44. [[DevOps Capstone Project 2_Projects_Devops BC = 2330070508\|DevOps Capstone Project 2]] <br> | ### Nagios:<br>39. [[Assignment 1 – Nagios_Nagios_Devops BC = 2330070508\|Assignment 1 – Nagios]]<br>40. [[Assignment 2 – Nagios_Nagios_Devops BC = 2330070508\|Assignment 2 – Nagios]] <br>41. [[Assignment 3 – Nagios_Nagios_Devops BC = 2330070508\|Assignment 3 – Nagios]] <br>42. [[Assignment 4 – Nagios_Nagios_Devops BC = 2330070508\|Assignment 4 – Nagios]]<br><br> | ### Module 8: Terraform<br>- [[Installing Terraform]]<br>34. [[Assignment 1 – Terraform_Module 8_Devops BC = 2330070508\|Assignment 1 – Terraform]]<br>35. [[Assignment 2 – Terraform_Module 8_Devops BC = 2330070508\|Assignment 2 – Terraform]] <br>36. [[Assignment 3 – Terraform_Module 8_Devops BC = 2330070508\|Assignment 3 – Terraform]] <br>37. [[Assignment 4 – Terraform_Module 8_Devops BC = 2330070508\|Assignment 4 – Terraform]]<br>38. [[Assignment 5 – Terraform_Module 8_Devops BC = 2330070508\|Assignment 5 – Terraform]] <br> |
+| ---- | ---- | ---- |
+|  | ### Module 7: Kubernetes<br>- [[Installing Kubernetes (Kubeadm)]]<br>29. [[Assignment 1 – Kubernetes_Module 7_Devops BC = 2330070508\|Assignment 1 – Kubernetes]]<br>30. [[Assignment 2 – Kubernetes_Module 7_Devops BC = 2330070508\|Assignment 2 – Kubernetes]]<br>31. [[Assignment 3 – Kubernetes_Module 7_Devops BC = 2330070508\|Assignment 3 – Kubernetes]] <br>32. [[Assignment 4 – Kubernetes_Module 7_Devops BC = 2330070508\|Assignment 4 – Kubernetes]]<br>33. [[Assignment 5 – Kubernetes_Module 7_Devops BC = 2330070508\|Assignment 5 – Kubernetes]] <br><br> |  |
 
 ---
 ### Puppet 
