--- a/content/Intellipaat/Devops BC = 2330070508.md
+++ b/content/Intellipaat/Devops BC = 2330070508.md
@@ -44,18 +44,30 @@
 32. [[Assignment 4 – Kubernetes_Module 7_Devops BC = 2330070508|Assignment 4 – Kubernetes]]
 33. [[Assignment 5 – Kubernetes_Module 7_Devops BC = 2330070508|Assignment 5 – Kubernetes]] 
 
+### Module 8: Terraform
+- [[Installing Terraform]]
+34. [[Assignment 1 – Terraform_Module 8_Devops BC = 2330070508|Assignment 1 – Terraform]]
+35. [[Assignment 2 – Terraform_Module 8_Devops BC = 2330070508|Assignment 2 – Terraform]] 
+36. [[Assignment 3 – Terraform_Module 8_Devops BC = 2330070508|Assignment 3 – Terraform]] 
+37. [[Assignment 4 – Terraform_Module 8_Devops BC = 2330070508|Assignment 4 – Terraform]]
+38. [[Assignment 5 – Terraform_Module 8_Devops BC = 2330070508|Assignment 5 – Terraform]] 
+### Nagios:
+39. [[Assignment 1 – Nagios_Nagios_Devops BC = 2330070508|Assignment 1 – Nagios]]
+40. [[Assignment 2 – Nagios_Nagios_Devops BC = 2330070508|Assignment 2 – Nagios]] 
+41. [[Assignment 3 – Nagios_Nagios_Devops BC = 2330070508|Assignment 3 – Nagios]] 
+42. [[Assignment 4 – Nagios_Nagios_Devops BC = 2330070508|Assignment 4 – Nagios]]
 
-| ### Projects:<br>43. [[DevOps Capstone Project 1_Projects_Devops BC = 2330070508\|DevOps Capstone Project 1]] <br>44. [[DevOps Capstone Project 2_Projects_Devops BC = 2330070508\|DevOps Capstone Project 2]] <br> | ### Nagios:<br>39. [[Assignment 1 – Nagios_Nagios_Devops BC = 2330070508\|Assignment 1 – Nagios]]<br>40. [[Assignment 2 – Nagios_Nagios_Devops BC = 2330070508\|Assignment 2 – Nagios]] <br>41. [[Assignment 3 – Nagios_Nagios_Devops BC = 2330070508\|Assignment 3 – Nagios]] <br>42. [[Assignment 4 – Nagios_Nagios_Devops BC = 2330070508\|Assignment 4 – Nagios]]<br><br> |  |
-| ---- | ---- | ---- |
-|  |  |  |
+### Projects:
+43. [[DevOps Capstone Project 1_Projects_Devops BC = 2330070508|DevOps Capstone Project 1]] 
+44. [[DevOps Capstone Project 2_Projects_Devops BC = 2330070508|DevOps Capstone Project 2]] 
 
 ---
 ### Puppet 
-[[Installing Puppet]] ==Cleanup==
-[[Assignment 1 – Puppet_Module 4_Devops BC = 2330070508|Assignment 1 – Puppet]] ==Cleanup==
-[[Assignment 2 – Puppet_Module 4_Devops BC = 2330070508|Assignment 2 – Puppet]] ==Cleanup==
-[[Assignment 3 – Puppet_Module 4_Devops BC = 2330070508|Assignment 3 – Puppet]] ==Cleanup==
+- [[Installing Puppet]] ==Cleanup==
+- [[Assignment 1 – Puppet_Module 4_Devops BC = 2330070508|Assignment 1 – Puppet]] ==Cleanup==
+- [[Assignment 2 – Puppet_Module 4_Devops BC = 2330070508|Assignment 2 – Puppet]] ==Cleanup==
+- [[Assignment 3 – Puppet_Module 4_Devops BC = 2330070508|Assignment 3 – Puppet]] ==Cleanup==
 
-[[Assignment 4 – Puppet_Module 4_Devops BC = 2330070508|Assignment 4 – Puppet]] ==Pending==
-[[Assignment 5 – Puppet_Module 4_Devops BC = 2330070508|Assignment 5 – Puppet]] ==Pending==
-[[Case Study – Configuration Management Using Puppet_Module 4_Devops BC = 2330070508|Case Study – Configuration Management Using Puppet]]==Pending==
+- [[Assignment 4 – Puppet_Module 4_Devops BC = 2330070508|Assignment 4 – Puppet]] ==Pending==
+- [[Assignment 5 – Puppet_Module 4_Devops BC = 2330070508|Assignment 5 – Puppet]] ==Pending==
+- [[Case Study – Configuration Management Using Puppet_Module 4_Devops BC = 2330070508|Case Study – Configuration Management Using Puppet]]==Pending==
